[package]
name = "grape-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
dotenv = "0.15.0"
rocket = { version = "0.5.0", features = ["json"] }
sha2 = { version = "0.10.8", features = ["std"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "time"
] }
time = { version = "0.3.31", features = ["serde", "macros"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
